Fixed vertical space (on mobile) for MDPN records page

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -959,6 +959,11 @@ div.termheader {
 		display: none;
 	}
 
+	table.dpal td {
+		padding-top: 4px;
+		padding-bottom: 5px;
+	}
+
 	table.dpal td:first-child {
 		width: auto;
 	}
